Config class added